# Xouver

./: .gitignore  CMakeCache.txt  CMakeLists.txt
Common/: helpers.h  opcodes.h  returncodes.h
Include/: XNI.h  opcodes.h
XouverC/: CMakeLists.txt  code_geerator.cpp  code_generator.h  common.cpp  common.h  exception.cpp  exception.h  lexer.cpp  lexer.h  main.cpp  nodes.h  parser.cpp  parser.h  token.h
XouverC/codegen/: class.cpp  class.h  constant.h  funcscope.cpp  funcscope.h  function.h  iscope.h  scope.cpp  scope.h  type.h  var.h
XouverC/lexing/: lexer.cpp  lexer.h  token.h
XouverC/parsing/: ast.cpp  ast.h  parser.cpp  parser.h
XouverC/test/: test.xs
XouverKit/: XouverKit.cpp
XouverRT/: CMakeLists.txt  XNI.h  common.cpp
XouverRT/class/: classmanager.cpp  classmanager.h  xclass.h
XouverRT/mapping/: classmap.cpp  classmap.h  functionmap.cpp  functionmap.h
XouverRT/memory/: memory.cpp  memory.h
XouverRT/object/: object.h
XouverRT/runtime/: runtime.cpp  runtime.h
XouverRT/value/: valuetype.h  xvalue.h
docs/xPKG/: class_info.md  constant_info.md  function_info.md  instruction.md  package_info.md  xpkg_get_package.md
runtime/: CMakeLists.txt  main.cpp  memory.cpp  memory.h  opcodes.h  vm.cpp  vm.h  xi.h
xPKG/: CMakeLists.txt  bytecode_stream.cpp  main.cpp  xpkg.cpp  xpkg.h
